Added search functionality to recipes

--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -1,6 +1,7 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
+  <div class="container">
     <form action="{% url 'add_recipe' %}" method="post">
       {% csrf_token %}
       <!-- I need to add the proper labels here-->
@@ -14,4 +15,5 @@
         </div>
       <button type="submit" class="btn btn-primary">Save</button>
     </form>
+  </div>
 {% endblock %}
