--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -1,5 +1,6 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
-    This is the index page.
+    Beep beep boop boop home page.
+
 {% endblock %}
