--- a/recipes/static/recipes/style.css
+++ b/recipes/static/recipes/style.css
@@ -4,9 +4,25 @@ a {
 
 .body {
     padding-top: 5px;
-    padding-left: 5px;
 }
 
 .navbar-brand {
     padding-left: 5px;
+}
+
+.form {
+    padding-bottom: 5px;
+}
+
+.pagination {
+    justify-content: center;
+}
+
+.row {
+    padding-top: 5px;
+    text-align: center;
+}
+
+.recipe {
+    font-size: 20px;
 }
