--- a/recipes/templates/recipes/login.html
+++ b/recipes/templates/recipes/login.html
@@ -1,20 +1,22 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
-    <h1>Login</h1>
+    <div class="container">
+        <h1>Login</h1>
+    </div>
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-
-        <div class="mb-3">
-            <label for="input_username" class="form-label">Username</label>
-            <input autofocus type="text" class="form-control" id="input_username" name="username">
-        </div>
-        <div class="mb-3">
-            <label for="input_password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="input_password" name="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button> 
-
-    </form>
+    <div class="container">
+        <form action="{% url 'login' %}" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+                <label for="input_username" class="form-label">Username</label>
+                <input autofocus type="text" class="form-control" id="input_username" name="username">
+            </div>
+            <div class="mb-3">
+                <label for="input_password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="input_password" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button> 
+        </form>
+    </div>
 {% endblock %}
