testing password reset email functionality

--- a/recipes/templates/recipes/login.html
+++ b/recipes/templates/recipes/login.html
@@ -18,5 +18,8 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button> 
         </form>
+        <div>
+            Forgot your password? Click <a href="{% url 'password_reset' %}">here</a>.
+        </div>
     </div>
 {% endblock %}
