--- a/recipes/templates/recipes/password_reset_confirm.html
+++ b/recipes/templates/recipes/password_reset_confirm.html
@@ -7,13 +7,13 @@
     </div>
 
     <div class="container">
-        <form action="{% url 'password_reset' %}" method="post">
+        <form action="{% url 'password_reset_confirm' %}" method="post">
             {% csrf_token %}
             <div class="mb-3">
-                <label for="input_email" class="form-label">Email Address</label>
-                <input autofocus type="text" class="form-control" id="input_email" name="email">
+                <label for="input_email" class="form-label">New Password</label>
+                <input autofocus type="text" class="form-control" id="input_password" name="email">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button> 
+            <button type="submit" class="btn btn-primary">Reset Password</button> 
         </form>
     </div>
 {% endblock %}
