--- a/recipes/templates/recipes/password_reset_done.html
+++ b/recipes/templates/recipes/password_reset_done.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <h1>Password Reset Sent</h1>
-        <p>We’ve emailed you instructions for setting your password - if an account exists with the email you entered. You should receive them shortly.</p>
-        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+        <p>We’ve emailed you instructions for setting your password - <i>if</i> an account exists with the email you entered. You should receive them shortly.</p>
+        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and <strong>check your spam folder.</strong></p>
     </div>
 {% endblock %}
