--- a/recipes/templates/recipes/password_reset_form.html
+++ b/recipes/templates/recipes/password_reset_form.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <h1>Reset Password</h1>
-        <p>Forgot your password? Enter your email address below, and we’ll email you instructions for setting a new one.</p>
+        <p>Enter your email address below, and we’ll email you instructions for setting a new one.</p>
     </div>
 
     <div class="container">
