created custom template for password reset confirm

--- a/recipes/templates/recipes/password_reset_confirm.html
+++ b/recipes/templates/recipes/password_reset_confirm.html
@@ -7,13 +7,10 @@
     </div>
 
     <div class="container">
-        <form action="{% url 'password_reset_confirm' %}" method="post">
+        <form method="post">
             {% csrf_token %}
-            <div class="mb-3">
-                <label for="input_email" class="form-label">New Password</label>
-                <input autofocus type="text" class="form-control" id="input_password" name="email">
-            </div>
-            <button type="submit" class="btn btn-primary">Reset Password</button> 
+            {{ form }}
+            <input type="Submit" name="Update Password">
         </form>
     </div>
 {% endblock %}
