created custom template for password reset confirm

--- a/recipes/templates/recipes/password_reset_confirm.html
+++ b/recipes/templates/recipes/password_reset_confirm.html
@@ -9,8 +9,15 @@
     <div class="container">
         <form method="post">
             {% csrf_token %}
-            {{ form }}
-            <input type="Submit" name="Update Password">
+            <div class="mb-3">
+                <label for="{{ form.new_password1.id_for_label }}" class="form-label">New Password</label>
+                {{ form.new_password1 }}
+            </div>
+            <div class="mb-3">
+                <label for="{{ form.new_password2.id_for_label }}" class="form-label">Confirm Password</label>
+                {{ form.new_password2 }}
+            </div>
+            <button type="submit" class="btn btn-primary" name="Update Password">Save</button>
         </form>
     </div>
 {% endblock %}
