--- a/recipes/templates/recipes/login.html
+++ b/recipes/templates/recipes/login.html
@@ -1,25 +1,30 @@
 {% extends "recipes/layout.html" %}
+{% load crispy_forms_tags %}
 
 {% block body %}
-    <div class="container">
-        <h1>Login</h1>
-    </div>
 
-    <div class="container">
-        <form action="{% url 'login' %}" method="post">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="input_username" class="form-label">Username</label>
-                <input autofocus type="text" class="form-control" id="input_username" name="username">
-            </div>
-            <div class="mb-3">
-                <label for="input_password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="input_password" name="password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button> 
-        </form>
-        <div>
-            Forgot your password? Click <a href="{% url 'password_reset' %}">here</a>.
-        </div>
-    </div>
+{% if form.errors %}
+{{ error }}
+{% endif %}
+
+{% if next %}
+    {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+    please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %}
+{% endif %}
+<div class="container">
+    <h1>Login</h1>
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+
+        <input type="submit" class="btn btn-primary" value="Login">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+</div>
+
 {% endblock %}
