--- a/recipes/templates/recipes/password_reset_confirm.html
+++ b/recipes/templates/recipes/password_reset_confirm.html
@@ -1,23 +1,15 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
-    <div class="container">
-        <h1>Reset Password</h1>
-        <p>Forgot your password? Enter your email address below, and we’ll email you instructions for setting a new one.</p>
-    </div>
+<div class="container">
+    <h1>Confirm New Password</h1>
+</div>
 
-    <div class="container">
-        <form method="post">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="{{ form.new_password1.id_for_label }}" class="form-label">New Password</label>
-                {{ form.new_password1 }}
-            </div>
-            <div class="mb-3">
-                <label for="{{ form.new_password2.id_for_label }}" class="form-label">Confirm Password</label>
-                {{ form.new_password2 }}
-            </div>
-            <button type="submit" class="btn btn-primary" name="Update Password">Save</button>
-        </form>
-    </div>
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-primary" value="Reset Password">
+    </form>
+</div>
 {% endblock %}
