--- a/recipes/templates/recipes/add_recipe.html
+++ b/recipes/templates/recipes/add_recipe.html
@@ -1,19 +1,14 @@
 {% extends "recipes/layout.html" %}
+{% load crispy_forms_tags %}
 
 {% block body %}
   <div class="container">
+    <h1>Add Recipe</h1>
     <form action="{% url 'add_recipe' %}" method="post">
       {% csrf_token %}
       <!-- I need to add the proper labels here-->
-      <div class="mb-3">
-        <label for="{{ recipe_form.title.id_for_label }}" class="form-label">Title</label>
-        {{ recipe_form.title }}
-      </div>
-      <div class="mb-3">
-        <label for="{{ recipe_form.url.id_for_label }}" class="form-label">Url</label>
-        {{ recipe_form.url }}
-      </div>
-      <button type="submit" class="btn btn-primary">Save</button>
+      {{ recipe_form|crispy }}
+      <input type="submit" class="btn btn-primary" value="Save">
     </form>
   </div>
 {% endblock %}
