--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -1,6 +1,51 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
-    Beep beep boop boop home page.
 
+{% if user.is_authenticated %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>My Recipes</h1>
+            </div>
+        </div>
+    </div>    
+    
+    <div class="container">
+        {% for recipe in page_obj %}
+            <div class="row">
+                <div class="col recipe">
+                    <a class="recipe" href="{{ recipe.url }}">{{ recipe.title }}</a>
+                </div>
+            </div>
+        {% empty %}
+            <div>
+                You haven't saved any recipes yet! Click <a style="text-decoration: none;" href="{% url 'add_recipe' %}">here</a> to add one.
+            </div>
+        {% endfor %}
+    </div>
+    <div class="container">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+            </ul>
+        </nav>
+      </div>
+{% else %}
+      Hey this is what we're all about.
+{% endif %}
 {% endblock %}
