--- a/recipes/templates/recipes/layout.html
+++ b/recipes/templates/recipes/layout.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #800000;">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #800000;">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'index' %}">RecipeBox</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +26,6 @@
           {% if user.is_authenticated %}
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'my_recipes' request.user.id %}">Box</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'add_recipe' %}">Add</a>
               </li>
             </ul>
@@ -37,14 +34,17 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   {{ user.username }}
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                  <li><a class="dropdown-item" href="#">Something here</a></li>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
             </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
 
 
         {% else %}
