--- a/recipes/templates/recipes/password_reset_done.html
+++ b/recipes/templates/recipes/password_reset_done.html
@@ -2,8 +2,9 @@
 
 {% block body %}
     <div class="container">
-        <h1>Password Reset Sent</h1>
-        <p>We’ve emailed you instructions for setting your password - <i>if</i> an account exists with the email you entered. You should receive them shortly.</p>
-        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and <strong>check your spam folder.</strong></p>
+        <h1>Password Reset Done</h1>
+        <p>
+            Your password has been changed. Sign in <a href="{% url 'login' %}">here.</a>
+        </p>
     </div>
 {% endblock %}
