--- a/recipes/templates/recipes/test.html
+++ b/recipes/templates/recipes/test.html
@@ -1,16 +1,19 @@
 {% extends "recipes/layout.html" %}
-{% load crispy_forms_tags %}
 
 {% block body %}
 <div class="container">
-    <h1>Set New Password</h1>
+    <h1>Change Password</h1>
+    <p>
+      Your current email is <strong>{{ user.email }}.</strong>
+    </p>
 </div>
 
 <div class="container">
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input type="submit" class="btn btn-primary" value="Change Password">
-    </form>
+  <div class="mb-3">
+    <label for="input_email" class="form-label">New Email</label>
+    <input autofocus type="text" class="form-control" id="input_email" name="email">
+  </div>
+
+  <button type="submit" class="btn btn-primary">Submit</button> 
 </div>
 {% endblock %}
