--- a/recipes/templates/recipes/test.html
+++ b/recipes/templates/recipes/test.html
@@ -1,19 +1,27 @@
 {% extends "recipes/layout.html" %}
 
 {% block body %}
-<div class="container">
-    <h1>Change Password</h1>
-    <p>
-      Your current email is <strong>{{ user.email }}.</strong>
-    </p>
-</div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
 
-<div class="container">
-  <div class="mb-3">
-    <label for="input_email" class="form-label">New Email</label>
-    <input autofocus type="text" class="form-control" id="input_email" name="email">
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
-
-  <button type="submit" class="btn btn-primary">Submit</button> 
 </div>
 {% endblock %}
