--- a/recipes/templates/recipes/index.html
+++ b/recipes/templates/recipes/index.html
@@ -5,16 +5,19 @@
 {% if user.is_authenticated %}
 
 <div class="container">
-    <h1 class="my_recipes_title">My Recipes</h1>
+    <h1 id="page_title">My Recipes</h1>
     {% for message in messages %}
     <div class="alert alert-{{ message.tags }}" role="alert">
         {{ message }}
     </div>
     {% endfor %}
 </div>
-<br>
 
-<div class="container">
+<div class="container" id="recipe_list">
+  <form class="d-flex">
+    <input class="form-control me-2" type="search" id= "search_input" placeholder="Recipe Title" aria-label="Search">
+    <button class="btn btn-outline-success" type="submit" id="search">Search</button>
+  </form>
 <table class="table align-middle">
     <tbody>
         <tr>
@@ -36,7 +39,7 @@
   </table>
 </div>
 
-  <div class="container">
+  <div class="container" id="pagination">
     <nav aria-label="Page navigation example">
         <ul class="pagination">
         {% if page_obj.has_previous %}
