fixed password reset done template

--- a/recipes/templates/recipes/password_reset_done.html
+++ b/recipes/templates/recipes/password_reset_done.html
@@ -2,9 +2,9 @@
 
 {% block body %}
     <div class="container">
-        <h1>Password Reset Done</h1>
+        <h1>Password Reset Sent</h1>
         <p>
-            Your password has been changed. Sign in <a href="{% url 'login' %}">here.</a>
+            We've sent you an email to reset your password - if an account with that email exists. Be sure to check your <strong>spam</strong> folder.
         </p>
     </div>
 {% endblock %}
